--- a/src/sass/libs.sass
+++ b/src/sass/libs.sass
@@ -1,7 +1,7 @@
-@import "../libs/bootstrap-grid/bootstrap-grid"
+@import "../libs/bootstrap-grid"
 @import "../libs/slick-carousel/slick"
 @import "../libs/slick-carousel/slick-theme"
-@import "../libs/magnific-popup/magnific-popup"
 @import "../libs/animated/animate.min"
+@import "../libs/magnific-popup/magnific-popup"
 @import "../libs/custom-scrollbar/jquery.mCustomScrollbar.min"
-@import "../libs/font-awesome/font-awesome"
+@import "../libs/font-awesome"
