--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -9,9 +9,14 @@
 @import modules/menu
 //Footer
 @import modules/footer
-//Sections
-@import app
+
+//Pages
+//Index
+@import pages/index
+
 //Popup
 @import modules/popup
 //Custom libs
 @import modules/custom_libs
+//Custom libs
+@import media
