--- a/src/templates/data/data.html
+++ b/src/templates/data/data.html
@@ -1,10 +1,102 @@
 {% set 
-list = [
+infoItem = [
 	{
-		title: 'Item1'
+		img : 'eco',
+		desc: 'Экологички чистые (абсолютно не токсичные) материалы'
 	},
 	{
-		title: 'Item2'
+		img : 'no-noise',
+		desc: 'Высокая звуко, шумо, теплоизоляция'
+	},
+	{
+		img : 'time',
+		desc: 'Длительный срок службы <br> (до 100 лет)'
+	},
+	{
+		img : 'fireprotect',
+		desc: 'Пожаробезопасные'
+	},
+	{
+		img : 'puzzle',
+		desc: 'Монолитная поверхность'
 	}
-] 
+]
+%}
+
+{% set 
+slider = [
+
+	{
+		title: 'Соты',
+		img: '1'
+	},
+	{
+		title: 'Лабиринт',
+		img: '2'
+	},
+	{
+		title: 'Бамбук',
+		img: '3'
+	},
+	{
+		title: 'Волна',
+		img: '4'
+	},
+	{
+		title: 'Ламинария',
+		img: '5'
+	},
+	{
+		title: 'Феи',
+		img: '6'
+	},
+	{
+		title: 'Маленькая лесенка',
+		img: '7'
+	},
+	{
+		title: 'Зебра',
+		img: '8'
+	},
+	{
+		title: 'Устина',
+		img: '9'
+	},
+	{
+		title: 'Мягкий ромб',
+		img: '10'
+	},
+	{
+		title: 'Паутинка',
+		img: '11'
+	},
+	{
+		title: 'Мономир',
+		img: '12'
+	},
+	{
+		title: 'Ромб',
+		img: '13'
+	},
+	{
+		title: 'Астра',
+		img: '14'
+	},
+	{
+		title: 'Валенсия',
+		img: '15'
+	},
+	{
+		title: 'Старый кирпич',
+		img: '16'
+	},
+	{
+		title: 'Волна каноэ',
+		img: '17'
+	},
+	{
+		title: 'Максвелл',
+		img: '18'
+	}
+]
 %}
